added a new footer

--- a/Desktop/project9-Employee-Attendance/index.html
+++ b/Desktop/project9-Employee-Attendance/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-<p>added a new footer</p>
+<p>new text to the footer</p>
   </footer>
   <script src="./script.js"></script>
 </body>
